chore(docker-compose.yml): update Docker image configuration and build context

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,8 @@ services:
     restart: unless-stopped
 
   app:
-    image: ${DOCKER_IMAGE:-registry.gitlab.com/VOTRE_UTILISATEUR/achat:latest}
+    build: .
+    image: ${DOCKER_IMAGE:-registry.gitlab.com/valentin-briez-banuls/achat:latest}
     depends_on:
       db:
         condition: service_healthy
