feat(build-docker.yml): add GitHub Actions workflow for building and pushing Docker images

--- a/.env.example
+++ b/.env.example
@@ -7,6 +7,6 @@ RAILS_MASTER_KEY=your_master_key_here
 # Mot de passe PostgreSQL pour l'utilisateur 'achat'
 ACHAT_DATABASE_PASSWORD=change_me_secure_password
 
-# Image Docker à utiliser (depuis le registry GitLab)
-# Exemple : registry.gitlab.com/votre_user/achat:latest
-DOCKER_IMAGE=registry.gitlab.com/VOTRE_UTILISATEUR/achat:latest
+# Image Docker à utiliser (GitHub Container Registry)
+# Auto-buildée par GitHub Actions à chaque push sur main/master
+DOCKER_IMAGE=ghcr.io/valentin-briez-banuls/achat:latest
